--- a/Loading.html
+++ b/Loading.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="1;Bible_html/mal-01-GEN-001.html">
+    <meta http-equiv="refresh" content="1;index.html">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Loading Bible...</title>
 </head>
